# diarize

./: Dockerfile  compose.debug.yaml  compose.yaml  main.py  pyproject.toml
diarize/: interval_status.py
