[project]
name = "diarize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "pyannote-audio>=3.3.2",
    "pympi-ling",
    "torchaudio>=2.8.0",
]

[tool.uv.sources]
pympi-ling = { git = "https://github.com/JoFrhwld/pympi", rev = "pyproject" }
